--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build"
+    "deploy": "gh-pages -b master -d build",
+    "md-to-react": "node ./scripts/md-to-react.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -34,6 +35,8 @@
     "enzyme-adapter-react-16": "^1.11.2",
     "enzyme-to-json": "^3.3.5",
     "gh-pages": "^2.0.1",
+    "marked": "^0.6.1",
+    "mustache": "^3.0.1",
     "react-snap": "^1.23.0"
   },
   "jest": {
