--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "smart-contract-programmer",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://smartcontractprogrammer.com",
   "dependencies": {
-    "bootstrap": "^4.3.1",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
@@ -11,7 +11,9 @@
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "start": "react-scripts start",
