--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.5",
-    "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.5",
     "react-helmet": "^5.2.0",
     "react-router-dom": "^5.0.0",
@@ -23,7 +22,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
-    "md-to-react": "node ./scripts/md-to-react.js"
+    "md-to-react": "node ./scripts/md-to-react.js",
+    "gen-posts": "node ./scripts/gen-posts.js"
   },
   "eslintConfig": {
     "extends": "react-app"
