--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "homepage": "https://smartcontractprogrammer.com",
   "dependencies": {
+    "highlight.js": "^9.18.1",
+    "highlightjs-solidity": "^1.0.11",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -40,6 +42,8 @@
     "enzyme-adapter-react-16": "^1.15.2",
     "enzyme-to-json": "^3.4.4",
     "gh-pages": "^2.2.0",
+    "marked": "^0.8.2",
+    "mustache": "^4.0.1",
     "react-snap": "^1.23.0"
   },
   "jest": {
