--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build && npm test",
     "deploy": "gh-pages -b master -d build",
-    "md-to-html": "node scripts/md-to-html.js"
+    "build-md": "node scripts/build-md.js"
   },
   "eslintConfig": {
     "extends": "react-app"
