--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "yaml": "^1.8.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
