deploy without testing

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "postbuild": "react-snap",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build && npm test",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -b master -d build",
     "build-md": "node scripts/build-md.js"
   },
